[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel[build]",
  "hpp-manipulation[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "hpp-manipulation"
]
description = "Implementation of a parser for hpp-manipulation."
license = "BSD-2-Clause"
name = "hpp-manipulation-urdf"
version = "5.2.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
